--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,14 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".ui.detail.DetailCourseActivity"
-            android:label="@string/title_activity_detail_course"
+            android:name=".ui.detail.DetailActivity"
+            android:label="@string/title_activity_detail"
             android:parentActivityName=".ui.home.HomeActivity"
             android:theme="@style/Theme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.home.HomeActivity"/>
         </activity>
-        <activity android:name=".ui.reader.CourseReaderActivity" />
         <activity android:name=".SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,7 +29,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.home.HomeActivity" />
+        <activity android:name=".ui.home.HomeActivity"
+            android:launchMode="singleTop"/>
     </application>
 
 </manifest>
