--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".ui.detail.DetailActivity"
+            android:name=".ui.detail_movie.DetailMovieActivity"
             android:label="@string/title_activity_detail"
             android:parentActivityName=".ui.home.HomeActivity"
             android:theme="@style/Theme.NoActionBar">
@@ -22,15 +22,22 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.home.HomeActivity"/>
         </activity>
-        <activity android:name=".SplashScreenActivity">
+        <activity android:name=".ui.home.HomeActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.home.HomeActivity"
-            android:launchMode="singleTop"/>
+        <activity
+            android:name=".ui.detail_tv_show.DetailTvShowActivity"
+            android:parentActivityName=".ui.home.HomeActivity"
+            android:theme="@style/Theme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.home.HomeActivity"/>
+        </activity>
     </application>
 
 </manifest>
