--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mufiid.dicodingbajp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,17 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity
-            android:name=".ui.detail_movie.DetailMovieActivity"
-            android:label="@string/title_activity_detail"
-            android:parentActivityName=".ui.home.HomeActivity"
-            android:theme="@style/Theme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.home.HomeActivity"/>
-        </activity>
-        <activity android:name=".ui.home.HomeActivity"
-            android:launchMode="singleTop">
+        <activity android:name=".SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,12 +21,26 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.detail_movie.DetailMovieActivity"
+            android:label="@string/title_activity_detail"
+            android:parentActivityName=".ui.home.HomeActivity"
+            android:theme="@style/Theme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.home.HomeActivity" />
+        </activity>
+        <activity
+            android:name=".ui.home.HomeActivity"
+            android:launchMode="singleTop">
+
+        </activity>
+        <activity
             android:name=".ui.detail_tv_show.DetailTvShowActivity"
             android:parentActivityName=".ui.home.HomeActivity"
             android:theme="@style/Theme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.home.HomeActivity"/>
+                android:value=".ui.home.HomeActivity" />
         </activity>
     </application>
 
