--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,11 @@ ext {
     androidTestVersion = '1.3.0'
     androidXTestVersion = '1.2.0'
     mockitoVersion = '3.6.0'
+    mockitoKotlinVersion = '2.2.0'
 
     materialVersion = '1.2.1'
     recyclerViewVersion = '1.1.0'
     glideVersion = '4.11.0'
 
-    archLifecycleVersion = '2.2.0'
+    archLifecycleVersion = '2.1.0'
 }
