--- a/build.gradle
+++ b/build.gradle
@@ -43,4 +43,6 @@ ext {
     glideVersion = '4.11.0'
 
     archLifecycleVersion = '2.1.0'
+    roomVersion = '2.2.3'
+    roomRuntimeVersion = '2.2.5'
 }
